--- a/ex1.html
+++ b/ex1.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- meta tag gives extra information about webpage -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercise 1</title>
+      <!-- Internal CSS -->
     <style>
         *{
             background-color: aqua;
@@ -18,7 +20,9 @@
     </style>
 </head>
 <body>
+    <!-- Heading -->
     <h1 >Different Throwing Events</h1>
+    <!-- Image Mapping -->
     <div>
         <img src="throw.png" alt="Atheletics" usemap="#throw" width="500" height="500" >
     </div>
@@ -31,6 +35,7 @@
         <area target="_blank" shape="rect" coords="18,471,64,446" hreaf="https://en.wikipedia.org/wiki/Javelin_throw" alt="Javelin">
     </map>
 </body>
+    <!-- Footer -->
 <footer>
     <h1>THANK YOU</h1>
 </footer>
