--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h1>List of exercises:</h1><br>
         <ul>
             <li><a href="ex1.html">Exercise 1</a></li>
+            <li><a href="ex2.html">Exercise 2</a></li>
         </ul>
 </body>
 </html>
