--- a/ex2.html
+++ b/ex2.html
@@ -13,7 +13,7 @@
         }
         h1{
             text-align: center;
-            background-color: blue;
+            background-color: greenyellow;
         }
       
     </style>
@@ -25,11 +25,11 @@
      <h2>Introduction:</h2>
     <p>
         In athletics there are four standard throwing events <em class="em">
-        shot, discus, hammer, and javelin all </em>involve the use of implements of various weights and shapes that are hurled for distance.
+        shotput, discus, hammer, and javelin all </em>involve the use of implements of various weights and shapes that are hurled for distance.
     </p>
     <div  style=" text-align: center;"><!-- Inline Styling -->
         <h3>Click the image</h3>
-        <img src="throw.png" alt="Atheletics" usemap="#throw" width="500" height="500" >
+        <img class="throw" src="throw.png" alt="Atheletics" usemap="#throw" width="500" height="500" >
     </div>
 
     <map name="throw">
