--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ul>
             <li><a href="ex1.html">Exercise 1</a></li>
             <li><a href="ex2.html">Exercise 2</a></li>
+            <li><a href="ex3.html">Exercise 3</a></li>
         </ul>
 </body>
 </html>
